# open-media-platform

./: .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  UMSETZUNG.md
.github/workflows/: ci.yml
deploy/: catalog.json
deploy/dev/: Caddyfile  backup-omp.sh  install-mxl.sh  install-wpe.sh  make-test-media.sh  make-test-ograf-template.sh  mtls-issue-cert.sh  register-fake-node.sh  restore-omp.sh  soak-omp.sh  start-omp.sh  stop-omp.sh
deploy/nmos/: registry.json
deploy/quadlets/: README.md  omp-nats.container  omp-nmos-registry.container  omp-postgres.container  omp-step-ca.container
docs/: BENUTZERHANDBUCH.md  END-GOAL-FEATURES.md  HANDBUCH.md  NODE-TUTORIAL.md  REVIEW-2026-07-17-SKALIERUNG-24-7.md  decisions.md  descriptor-v0.schema.json
host-agent/: go.mod  main.go
host-agent/internal/catalog/: catalog.go
host-agent/internal/commands/: commands.go  commands_test.go
host-agent/internal/state/: state.go  state_test.go
host-agent/internal/telemetry/: telemetry.go  telemetry_test.go
nodes/: Cargo.toml  README.md  deny.toml
nodes/mock/: go.mod  go.sum  main.go
nodes/mock/internal/connection/: handler.go  handler_test.go  receiver.go  receiver_test.go
nodes/mock/internal/descriptor/: descriptor.go  descriptor_test.go  schema_test.go
nodes/mock/internal/health/: publisher.go
nodes/mock/internal/idgen/: uuid.go  uuid_test.go
nodes/mock/internal/is04/: client.go  resources.go  resources_test.go
nodes/mock/internal/mtls/: mtls.go  mtls_test.go
nodes/mock/internal/uibundle/: bundle.go  bundle.js  bundle_test.go  manifest.json
nodes/omp-2110-gateway/: Cargo.toml
nodes/omp-2110-gateway/src/: main.rs  pipeline.rs  sdp.rs
nodes/omp-aes67-gateway/: Cargo.toml
nodes/omp-aes67-gateway/src/: main.rs  pipeline.rs  sap.rs  sdp.rs
nodes/omp-audio-mixer/: Cargo.toml
nodes/omp-audio-mixer/src/: levels.rs  main.rs  pipeline.rs  uibundle.rs
nodes/omp-audio-mixer/ui/: bundle.js  manifest.json
nodes/omp-fabrics-gateway/: Cargo.toml
nodes/omp-fabrics-gateway/src/: main.rs  relay.rs
nodes/omp-media-library/: Cargo.toml
nodes/omp-media-library/src/: main.rs  uibundle.rs
nodes/omp-media-library/ui/: bundle.js  manifest.json
nodes/omp-mediaio/: Cargo.toml  build.rs
nodes/omp-mediaio/examples/: leaky_appsrc_test.rs  mxl_concurrent_reader_repro.rs  mxl_multithread_repro.rs  mxl_reopen_repro.rs
nodes/omp-mediaio/src/: fabrics.rs  lib.rs  mxl.rs  preview.rs  ptp.rs  rtp.rs  st2110.rs
nodes/omp-multiviewer/: Cargo.toml
nodes/omp-multiviewer/src/: main.rs  pipeline.rs
nodes/omp-node-sdk/: Cargo.toml
nodes/omp-node-sdk/examples/: hello_node.rs
nodes/omp-node-sdk/src/: connection.rs  descriptor.rs  health.rs  idgen.rs  is04.rs  lib.rs  node.rs  peer.rs  plugins.rs  server.rs
nodes/omp-ograf/: Cargo.toml
nodes/omp-ograf/src/: main.rs  pipeline.rs  templates.rs  uibundle.rs
nodes/omp-ograf/ui/: bundle.js  harness.html  manifest.json
nodes/omp-player/: Cargo.toml
nodes/omp-player/src/: discovery.rs  main.rs  pipeline.rs  uibundle.rs
nodes/omp-player/ui/: bundle-jingle.js  bundle-video.js  manifest-jingle.json  manifest-video.json
nodes/omp-playout-automation/: Cargo.toml
nodes/omp-playout-automation/src/: main.rs  playlist.rs  remote.rs  timeline.rs  uibundle.rs
nodes/omp-playout-automation/ui/: bundle.js  manifest.json
nodes/omp-recorder/: Cargo.toml
nodes/omp-recorder/src/: main.rs  pipeline.rs
nodes/omp-source/: Cargo.toml
nodes/omp-source/src/: main.rs  pipeline.rs
nodes/omp-srt-gateway/: Cargo.toml
nodes/omp-srt-gateway/src/: main.rs  pipeline.rs
nodes/omp-switcher/: Cargo.toml
nodes/omp-switcher/src/: main.rs  pipeline.rs  uibundle.rs
nodes/omp-switcher/ui/: bundle.js  manifest.json
nodes/omp-video-mixer-me/: Cargo.toml
nodes/omp-video-mixer-me/examples/: oom_repro.rs
nodes/omp-video-mixer-me/src/: main.rs  pipeline.rs  uibundle.rs
nodes/omp-video-mixer-me/ui/: bundle.js  manifest.json
nodes/omp-viewer/: Cargo.toml
nodes/omp-viewer/src/: main.rs  pipeline.rs  preview.rs  uibundle.rs
nodes/omp-viewer/ui/: bundle.js  manifest.json
nodes/playout/: Cargo.toml
nodes/playout/scripts/: generate_test_clips.sh
nodes/playout/src/: main.rs  pipeline.rs  playlist.rs
orchestrator/: go.mod  go.sum  main.go
orchestrator/internal/audit/: audit.go  audit_test.go
orchestrator/internal/auth/: auth.go  jwt.go  jwt_test.go  password.go  secret.go  service.go  store.go  store_test.go
orchestrator/internal/authz/: authz.go  authz_test.go  store.go  store_test.go
orchestrator/internal/config/: config.go  config_test.go
orchestrator/internal/consoles/: resolve.go  resolve_test.go  store.go
orchestrator/internal/db/: db.go  db_test.go
orchestrator/internal/eventbus/: eventbus.go  eventbus_test.go
orchestrator/internal/graph/: graph.go  graph_test.go
orchestrator/internal/health/: tracker.go  tracker_test.go
orchestrator/internal/hosts/: history.go  history_test.go  hosts.go  store.go  store_test.go  tracker.go  tracker_test.go
orchestrator/internal/httpapi/: auth_handlers.go  auth_handlers_test.go  auth_middleware.go  auth_middleware_test.go  console_handlers.go  graph_handlers.go  (+16 more)
tools/contract-check/: checks.go  checks_test.go  go.mod  is04.go  main.go
tools/nmos-conformance-check/: go.mod  main.go  results.go  results_test.go
ui/: README.md  design-tokens.css  index.html
ui/graph/: compatibility.ts  compatibility_test.ts  controls.ts  controls_test.ts  flow-canvas.ts  geometry.ts  geometry_test.ts  groups.ts  groups_test.ts  role-designer-logic.ts  role-designer-logic_test.ts  role-designer.ts  roles.ts  roles_test.ts
ui/kit/: index.ts  omp-button.ts  omp-confirm.ts  omp-fader.ts  omp-knob.ts  omp-meter.ts  omp-panel-section.ts  omp-toast.ts
ui/shell/: admin-view.ts  alarm-view.ts  app-shell.ts  auth.ts  connection.ts  connection_test.ts  console-board-logic.ts  console-board-logic_test.ts  console-board.ts  console-logic.ts  console-logic_test.ts  console-view.ts  hosts-view.ts  instances-view.ts  shell.ts  ui-bundle.ts  workflows-view.ts
(+62 files in other folders)
