[workspace]
resolver = "2"
members = [
    "omp-mediaio",
    "omp-node-sdk",
    "playout",
    "omp-source",
    "omp-viewer",
    "omp-switcher",
    "omp-video-mixer-me",
    "omp-audio-mixer",
    "omp-player",
    "omp-multiviewer",
    "omp-playout-automation",
    "omp-srt-gateway",
    "omp-ograf",
    "omp-2110-gateway",
    "omp-aes67-gateway",
    "omp-fabrics-gateway",
]
