[package]
name = "omp-aes67-gateway"
version = "0.1.0"
edition = "2024"
# Projektlizenz noch nicht entschieden (docs/decisions.md, Schritt C1) —
# publish=false wie bei omp-2110-gateway/omp-srt-gateway.
publish = false

[dependencies]
gstreamer = "0.25.3"
gstreamer-net = "0.25"
# Feature `mxl`: wie omp-2110-gateway berührt eine Seite den OMP-internen
# Fabric (Kapitel 19 Teil 3, docs/END-GOAL-FEATURES.md §19.3c/§19.4).
# Feature `ptp`: opt-in PTP-Zeitbasis (Kapitel 19 Teil 2).
omp-mediaio = { version = "0.1.0", path = "../omp-mediaio", features = ["mxl", "ptp"] }
omp-node-sdk = { version = "0.1.0", path = "../omp-node-sdk" }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "signal", "sync"] }
