[package]
name = "omp-media-library"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
omp-node-sdk = { version = "0.1.0", path = "../omp-node-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
