[package]
name = "omp-mediaio"
version = "0.1.0"
edition = "2024"
# Projektlizenz noch nicht entschieden (docs/decisions.md, Schritt C1) —
# publish=false wie bei omp-node-sdk.
publish = false

[dependencies]
gstreamer = "0.25.3"
gstreamer-app = { version = "0.25", optional = true }
# Feature `ptp`: PTP-Zeitbasis (Kapitel 19 Teil 2, opt-in) — `PtpClock`
# lebt in `libgstnet-1.0`/dem `gstreamer-net`-Crate, nicht in `gstreamer`
# selbst.
gstreamer-net = { version = "0.25", optional = true }
serde_json = { version = "1", optional = true }
mxl = { path = "../../third_party/mxl/rust/mxl", features = ["mxl-not-built"], optional = true }
mxl-sys = { path = "../../third_party/mxl/rust/mxl-sys", features = ["mxl-not-built"], optional = true }
tiny_http = { version = "0.12.0", optional = true }
# Feature `fabrics`: dieselbe Version wie third_party/mxl/rust/Cargo.toml
# (workspace-Pin dort), damit kein zweiter libloading-Import im
# Abhängigkeitsbaum landet (bereits über mxl-sys aufgelöst).
libloading = { version = "0.8.9", optional = true }

[build-dependencies]
bindgen = { version = "0.72", features = ["experimental"], optional = true }

# Feature `mxl`: MXL-Zero-Copy-Ein-/Ausgang (`UMSETZUNG.md` C4). Default aus,
# damit Mock/Playout ohne geklontes/gebautes MXL-Repo bauen
# (`deploy/dev/install-mxl.sh` muss vorher gelaufen sein, siehe
# docs/decisions.md 2026-07-09 "MXL-GStreamer-Integration richtiggestellt").
# Feature `preview`: MJPEG-über-HTTP-Vorschau (`UMSETZUNG.md` C6), nach
# hier verschoben (2026-07-12), damit `omp-viewer` und `omp-multiviewer`
# sie sich teilen statt zu duplizieren.
# Feature `fabrics`: MXL-native Fabrics/RDMA-Transport (Kapitel 16 Teil 1,
# `docs/END-GOAL-FEATURES.md` §16.4) — eigene, schlanke bindgen-Anbindung
# an `mxl/fabrics.h` statt einer Erweiterung der vendorten `mxl-sys`
# (die deckt nur `mxl.h`/`flow.h`/... ab, kein `fabrics.h`, s. build.rs).
# Braucht dieselbe geklonte/gebaute MXL-Quelle wie `mxl` (Header-Pfade,
# kein zusätzlicher Build-Schritt).
[features]
mxl = ["dep:mxl", "dep:mxl-sys", "dep:gstreamer-app", "dep:serde_json"]
preview = ["dep:tiny_http", "dep:gstreamer-app"]
fabrics = ["dep:libloading", "dep:bindgen"]
ptp = ["dep:gstreamer-net"]
