[package]
name = "omp-node-sdk"
version = "0.1.0"
edition = "2024"
# Projektlizenz noch nicht entschieden (docs/decisions.md, Schritt C1) —
# publish=false verhindert ein versehentliches crates.io-Publish vor dieser
# Entscheidung und lässt cargo-deny dieses Crate von der Lizenzprüfung
# ausnehmen ([licenses.private] ignore=true in deny.toml).
publish = false

[dependencies]
async-nats = "0.49.1"
# Nur fürs `Stream`-Trait (`Subscriber::next()`, `subscribe_tally`,
# UMSETZUNG.md C11) — bereits transitive Abhängigkeit von async-nats/tokio
# (siehe Cargo.lock), hier nur explizit gemacht statt neu eingeführt;
# kein eigener NATS-Client (gleiche Ausnahme wie async-nats selbst,
# docs/decisions.md Schritt A6).
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
getrandom = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny_http = "0.12.0"
tokio = { version = "1.52.3", features = ["rt", "time", "macros"] }
ureq = { version = "3.3.0", features = ["json"] }
