[package]
name = "omp-player"
version = "0.1.0"
edition = "2024"
# Projektlizenz noch nicht entschieden (docs/decisions.md, Schritt C1) —
# publish=false wie bei omp-node-sdk/omp-switcher/omp-audio-mixer.
publish = false

[dependencies]
gstreamer = "0.25.3"
# gstreamer-pbutils::Discoverer für die Dauer-Probe echter Mediendateien
# (K2-Teil-1, docs/decisions.md) — kein Neubau in eigenem Code sinnvoll
# möglich (Dauer-Ermittlung braucht denselben Demux/Decoder-Stack wie die
# Wiedergabe selbst), Teil von gst-plugins-base wie `gstreamer` selbst,
# keine zusätzliche Systemdependency.
gstreamer-pbutils = "0.25.2"
omp-mediaio = { version = "0.1.0", path = "../omp-mediaio", features = ["mxl"] }
omp-node-sdk = { version = "0.1.0", path = "../omp-node-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "signal", "sync", "time"] }
